# Complete_Coverage_Path_Planning

./: CMakeLists.txt  build_program.sh
UnitTest/: CMakeLists.txt  test_boustrophedon.cpp
algorithms/include/: boustrophedon_explorator.h  energy_functional_explorator.h
algorithms/src/: boustrophedon_explorator.cpp  energy_functional_explorator.cpp
sample/: 20230824.pgm  20230824.yaml  amr.yaml
utils/include/: dataloader.h
utils/include/geometry_msgs/: Point32.h  Polygon.h  Pose2D.h
utils/include/ipa_building_navigation/: A_star_pathplanner.h  contains.h  distance_matrix.h  genetic_TSP.h  nearest_neighbor_TSP.h
utils/include/ipa_room_exploration/: fov_to_robot_mapper.h  meanshift2d.h  room_rotator.h
utils/include/ros/: datatypes.h  message_operations.h  roscpp_serialization_macros.h  serialization.h  serialized_message.h  time.h
utils/src/: dataloader.cpp
utils/src/ipa_building_navigation/: A_star_pathplanner.cpp  genetic_TSP.cpp  nearest_neighbor_TSP.cpp  node.cpp
utils/src/ipa_room_exploration/: fov_to_robot_mapper.cpp  room_rotator.cpp
utils/src/ros/: map_accessibility_analysis.cpp
